--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,11 +1,8 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Oswald:wght@200..700&family=Syne:wght@400..800&display=swap');
 
 :root {
-
   --color-text: #242424;
-  --font-family: 'Inter', sans-serif;
+  --font-family: 'Syne', sans-serif;
 }
 
 
